@@ -105,19 +105,22 @@ def test_domain_py_xrefs(app, status, warning):
                    'mod_child_2', 'meth')
     assert_refnode(refnodes[4], 'module_a.submodule', 'ModTopLevel',
                    'module_a.submodule.ModTopLevel.mod_child_1', 'meth')
-    assert_refnode(refnodes[5], 'module_b.submodule', None,
+    assert_refnode(refnodes[5], 'module_a.submodule', 'ModTopLevel',
+                   'prop', 'attr')
+    assert_refnode(refnodes[6], 'module_a.submodule', 'ModTopLevel',
+                   'prop', 'meth')
+    assert_refnode(refnodes[7], 'module_b.submodule', None,
                    'ModTopLevel', 'class')
-    assert_refnode(refnodes[6], 'module_b.submodule', 'ModTopLevel',
+    assert_refnode(refnodes[8], 'module_b.submodule', 'ModTopLevel',
                    'ModNoModule', 'class')
-    assert_refnode(refnodes[7], False, False, 'int', 'class')
-    assert_refnode(refnodes[8], False, False, 'tuple', 'class')
-    assert_refnode(refnodes[9], False, False, 'str', 'class')
-    assert_refnode(refnodes[10], False, False, 'float', 'class')
-    assert_refnode(refnodes[11], False, False, 'list', 'class')
-    assert_refnode(refnodes[11], False, False, 'list', 'class')
-    assert_refnode(refnodes[12], False, False, 'ModTopLevel', 'class')
-    assert_refnode(refnodes[13], False, False, 'index', 'doc', domain='std')
-    assert len(refnodes) == 14
+    assert_refnode(refnodes[9], False, False, 'int', 'class')
+    assert_refnode(refnodes[10], False, False, 'tuple', 'class')
+    assert_refnode(refnodes[11], False, False, 'str', 'class')
+    assert_refnode(refnodes[12], False, False, 'float', 'class')
+    assert_refnode(refnodes[13], False, False, 'list', 'class')
+    assert_refnode(refnodes[14], False, False, 'ModTopLevel', 'class')
+    assert_refnode(refnodes[15], False, False, 'index', 'doc', domain='std')
+    assert len(refnodes) == 16
 
     doctree = app.env.get_doctree('module_option')
     refnodes = list(doctree.traverse(addnodes.pending_xref))
@@ -159,6 +162,21 @@ def test_domain_py_objects(app, status, warning):
     assert objects['NestedParentA.child_2'] == ('roles', 'method')
     assert objects['NestedParentB'] == ('roles', 'class')
     assert objects['NestedParentB.child_1'] == ('roles', 'method')
+
+
+@pytest.mark.sphinx('html', testroot='domain-py')
+def test_resolve_xref_for_properties(app, status, warning):
+    app.builder.build_all()
+
+    content = (app.outdir / 'module.html').text()
+    assert ('Link to <a class="reference internal" href="#module_a.submodule.ModTopLevel.prop"'
+            ' title="module_a.submodule.ModTopLevel.prop">'
+            '<code class="xref py py-attr docutils literal notranslate"><span class="pre">'
+            'prop</span> <span class="pre">attribute</span></code></a>' in content)
+    assert ('Link to <a class="reference internal" href="#module_a.submodule.ModTopLevel.prop"'
+            ' title="module_a.submodule.ModTopLevel.prop">'
+            '<code class="xref py py-meth docutils literal notranslate"><span class="pre">'
+            'prop</span> <span class="pre">method</span></code></a>' in content)
 
 
 @pytest.mark.sphinx('dummy', testroot='domain-py')
